recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:4: error: type mismatch;
 found   : Unit
 required: List[Int]
    if(c < t){
    ^