recursion.cons.butnlast.ButNlast.scala.code
def butNlast(l:List[Int], n:Int): List[Int] = {
  def lambda(tl:List[Int], t:Int, c:Int): List[Int] = {
    if(c < t){
      return tl.head::lambda(tl, t,c+1);
    }
  }
  return lambda(l, l.size - n, 0)
}